Add serve and change set language to en_ID

--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 
-<!--
-     Override `ll_CC` below with your default language and country code
-  -->
-<meta http-equiv="refresh" content="0; url=ll_CC/" />
+<meta http-equiv="refresh" content="0; url=en_ID/" />
 
-<title>Loading</title>
+<title>Kulkul.tech - Open-source | Loading...</title>
 </head>
 
 <body>
