Separate css of progress.md

--- a/en_ID/index.html
+++ b/en_ID/index.html
@@ -13,6 +13,7 @@
     <meta name="fragment" content="!">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.png" />
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="main.css">
     <style type="text/css">
     .navbar-image {
         z-index:2000;
