Change font color in Duration and Time

--- a/en_ID/index.html
+++ b/en_ID/index.html
@@ -83,6 +83,7 @@
         /* md-text is not of md-col-* but needs the spacing */
         margin-left: 15px;
         margin-right: 15px;
+        color:#8b0000;
     }
 
     /* float images */
