--- a/en_ID/index.html
+++ b/en_ID/index.html
@@ -203,6 +203,7 @@
         and reload the page.
     </noscript>
     <a href="https://github.com/kulkultech"><img class="navbar-image" src="favicon.png" alt="Kulkul Logo"></a>
+    <a name="md-page-menu"></a>
     <div id="md-all">
     </div>
 </body>
