--- a/en_ID/index.html
+++ b/en_ID/index.html
@@ -203,8 +203,8 @@
         and reload the page.
     </noscript>
     <a href="https://github.com/kulkultech"><img class="navbar-image" src="favicon.png" alt="Kulkul Logo"></a>
-    <div id="md-page-menu"></div>
     <div id="md-all">
+		<a id="md-page-menu"></a>
     </div>
 </body>
 </html>
