--- a/en_ID/index.html
+++ b/en_ID/index.html
@@ -194,6 +194,11 @@
     gtag('js', new Date());
 
     gtag('config', 'G-R4EZBGHWZD');
+
+    function goToTop() {
+        document.body.scrollTop = 0; // For Safari
+        document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+    }
 </script>
 
 </head>
