--- a/en_ID/index.html
+++ b/en_ID/index.html
@@ -198,6 +198,9 @@
 
 </head>
 <body>
+    <a class="forkmeongithub" href="https://github.com/kulkultech/open-source">
+    <img style="position: fixed;top: 10px;right: 11px;border: 0px;z-index: 2000;" src="https://i.postimg.cc/C1GWr36N/forkme-right-red-aa0000.png" alt="Fork me on Github">
+    </a>
     <noscript>
         This website requires Javascript to be enabled. Please turn on Javascript
         and reload the page.
