adding discord gif

--- a/en_ID/index.html
+++ b/en_ID/index.html
@@ -25,6 +25,14 @@
     .navbar-brand {
         margin-left: 35px;
     }
+    .discord-image{
+        position: fixed;
+        z-index: 2000;
+        bottom: 20px;
+        margin-left: 96%;
+        width: 45px;
+        height: 45px;
+    }
 
     /* hide the main content while we assemble everything */
     .md-hidden-load { display: none; }
@@ -200,6 +208,9 @@
 <body>
     <a class="forkmeongithub" href="https://github.com/kulkultech/open-source">
     <img style="position: fixed;top: 10px;right: 11px;border: 0px;z-index: 2000;" src="https://i.postimg.cc/C1GWr36N/forkme-right-red-aa0000.png" alt="Fork me on Github">
+    </a>
+    <a href="https://discord.com/invite/AYvyGpb7aP">
+    <img class="discord-image" src="https://pi7.org/static/imgcomp/gif_dis_0.gif" alt="discord logo">
     </a>
     <noscript>
         This website requires Javascript to be enabled. Please turn on Javascript
